--- a/10_users_2_server.yml
+++ b/10_users_2_server.yml
@@ -6,9 +6,9 @@ execution:
     requests: 
       - http://demo.blazemeter.com/echo.php?echo=${__machineName}
 
-  concurrency: 10
+  concurrency: 12
   hold-for: 5m
-  locations-weighted: false
+  locations-weighted: true
   locations:
     #us-west-1: 3
     eu-central-1: 2 #Frankfurt
